Updating tests to use roles table from Olga's database